Bugfixes: - fixed a bug where the tooltip position was not updated properly when changing the text. - fixed a bug where markdowns without language were not displayed properly. - Fixed a bug where the copy button and the language indicator would not fit properly on mobile view

--- a/sass/layout/_markdown.scss
+++ b/sass/layout/_markdown.scss
@@ -244,8 +244,8 @@ h6.markdown__heading {
 .post-code__overlay {
     position: absolute;
     z-index: 5;
-    top: 5px;
     right: 0;
+    display: flex;
     padding: 4px 10px 5px;
     border-radius: 0 0 0 2px;
     color: $white;
